GUM is crashing in Debug mode when access is granted/denied for a page that is gone https://bugs.webkit.org/show_bug.cgi?id=168003

Patch by Youenn Fablet <youenn@apple.com> on 2017-02-08
Reviewed by Eric Carlson.

Removing the assertion since manager can be null and case is coevered by the if statement behind it.

* UIProcess/UserMediaPermissionRequestProxy.cpp:
(WebKit::UserMediaPermissionRequestProxy::deny):

Canonical link: https://commits.webkit.org/185027@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211887 268f45cc-cd09-0410-ab3c-d52691b4dbfc